[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "python-project-template"
version = "0.1.0"
description = "A production-grade Python project template"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "pytest>=6.2.0",
    "pytest-cov>=2.10.0",
]

[project.optional-dependencies]
dev = [
    "black>=21.0.0",
    "flake8>=3.8.0",
    "mypy>=0.800",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  # files
  | .*\.pyc
  | .*\.pyo
  | .*\.pyd
  | .*\.so
)/
'''

[tool.flake8]
max-line-length = 88
extend-ignore = [
    "E203",
    "W503",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
